--- a/auditoria/main.html
+++ b/auditoria/main.html
@@ -23,7 +23,7 @@
     <header class="header">
         <div class="header-content">
             <div class="logo">
-                <h1>🍳 Cooksy</h1>
+                <h1>🍳 Cooksys</h1>
             </div>
             <div class="header-controls">
                 <div class="search-container">
@@ -227,4 +227,5 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
